added RStemplate repo as submodule, updated readme, +bugfix

--- a/docker_rsv/Dockerfile
+++ b/docker_rsv/Dockerfile
@@ -4,16 +4,15 @@ WORKDIR /tmp
 
 RUN pip install lxml requests six
 
-# RUN apk update 
+# RUN apk update
 
 RUN apk add git diffutils
-
-RUN git clone https://github.com/macmillanpublishers/RSuite_Word-template.git /opt/RSuite_Word-template
 
 RUN mkdir /opt/rsv
 
 COPY ./xml_docx_stylechecks /opt/rsv/xml_docx_stylechecks
 COPY ./test /opt/rsv/test
+COPY ./RSuite_Word-template /opt/RSuite_Word-template
 
 # CMD [ "python", "./your-daemon-or-script.py" ]
 # ENTRYPOINT ["top", "-b"]
